# birdAnalyzer

./: .gitignore  Cargo.toml  sample-config.yml
src/: common.rs  main.rs  types.rs
src/rotki/: common.rs  types.rs  worker.rs
src/utils/: yaml_parser.rs
