[package]
name = "rotkiAnalyzer"
version = "0.1.0"
authors = ["Vahe Grigoryan <vahegian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
base64 = "0.13.0"
hmac = "0.10.1"
sha2 = "0.9.2"